--- a/Frontend/ecommerce-app/src/app/create-user-by-admin/create-user-by-admin.component.html
+++ b/Frontend/ecommerce-app/src/app/create-user-by-admin/create-user-by-admin.component.html
@@ -1,31 +1,35 @@
 <app-nav-bar-view></app-nav-bar-view>
 
-<button class="btn btn-primary" (click)="createUserData()">Create user</button>
-<button class="btn btn-secondary" (click)="goBack()">Go Back</button>
-
-<p>{{feedback}}</p>
-
-<form (click)="this.feedback=''">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label>Name</label>
-        <input type="text" class="form-control" [(ngModel)]="creatingUser.name" name="name" id="name">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Email</label>
-        <input type="email" class="form-control" [(ngModel)]="creatingUser.email" name="email" id="email">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Password</label>
-        <input type="password" class="form-control" [(ngModel)]="creatingUser.password" name="password" id="password">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Address</label>
-        <input type="text" class="form-control" [(ngModel)]="creatingUser.address" name="address" id="address">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Roles (separate them by commas)</label>
-        <input type="text" class="form-control" [(ngModel)]="creatingUser.roles" name="roles" id="roles">
-      </div>
+<h3 class="row justify-content-center align-items-center">Create a new user</h3>
+<form (click)="this.feedback=''" class="row justify-content-center align-items-center" style="height: 60vh;">
+  <div class="form-row col-12" style="background-color: rgb(238, 235, 235); width: 40%;">
+    <div class="form-group col-12">
+      <h6>Name</h6>
+      <input type="text" class="form-control" [(ngModel)]="creatingUser.name" name="name" id="name">
     </div>
-  </form>
+    <div class="form-group col-12">
+      <h6>Email</h6>
+      <input type="email" class="form-control" [(ngModel)]="creatingUser.email" name="email" id="email">
+    </div>
+    <div class="form-group col-12">
+      <h6>Password</h6>
+      <input type="password" class="form-control" [(ngModel)]="creatingUser.password" name="password" id="password">
+    </div>
+    <div class="form-group col-12">
+      <h6>Address</h6>
+      <input type="text" class="form-control" [(ngModel)]="creatingUser.address" name="address" id="address">
+    </div>
+    <h6>Roles</h6>
+    <div class="form-check" *ngFor="let r of roles; let i = index">
+      <input class="form-check-input" type="checkbox" name="rolRadio" [value]="r" [checked]="selectedRoles.includes(r)"
+        (change)="toggleRoleSelection(r)">
+      <label class="form-check-label" [for]="'rolRadio' + i">
+        {{ r }}
+      </label>
+    </div>
+    <button class="btn btn-primary" (click)="createUserData()">Create user</button>
+    <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
+    <p>{{feedback}}</p>
+
+  </div>
+</form>
