--- a/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
+++ b/Frontend/ecommerce-app/src/app/product-view/product-view.component.html
@@ -22,9 +22,9 @@
         <h4>Categories</h4>
         <div class="radio-buttons" class="col-md-3">
           <div class="form-check" *ngFor="let cat of categories; let i = index">
-            <input class="form-check-input" type="radio" name="brandRadio" [id]="'brandRadio' + i" [value]="cat"
+            <input class="form-check-input" type="radio" name="catRadio" [id]="'catRadio' + i" [value]="cat"
               [(ngModel)]="selectedCategory">
-            <label class="form-check-label" [for]="'brandRadio' + i">
+            <label class="form-check-label" [for]="'catRadio' + i">
               {{ cat }}
             </label>
           </div>
@@ -53,9 +53,8 @@
       </div>
     </div>
   </div>
-
   <div class="container-fluid" class="mh-100">
-    <div class="row justify-content-center text-center">
+    <div class="row justify-content-center text-center" *ngIf="!!data">
       <div class="col-md-3" *ngFor="let product of data">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
