--- a/Frontend/ecommerce-app/src/app/update-user-by-admin-view/update-user-by-admin-view.component.html
+++ b/Frontend/ecommerce-app/src/app/update-user-by-admin-view/update-user-by-admin-view.component.html
@@ -1,26 +1,31 @@
 <app-nav-bar-view></app-nav-bar-view>
-<form *ngIf="updatingUser" (click)="this.feedback=''">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label>Name</label>
-        <input type="text" class="form-control" [(ngModel)]="updatingUser.name" name="name" id="name">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Password</label>
-        <input type="password" class="form-control" [(ngModel)]="updatingUser.password" name="password" id="password">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Address</label>
-        <input type="text" class="form-control" [(ngModel)]="updatingUser.address" name="address" id="address">
-      </div>
-      <div class="form-group col-md-6">
-        <label>Roles (separate them by commas)</label>
-        <input type="text" class="form-control" [(ngModel)]="updatingUser.roles" name="roles" id="roles">
+<h3 class="row justify-content-center align-items-center">Update an existing user</h3>
+<form *ngIf="updatingUser" style="width: 40%; margin: 0 auto; align-items: center;" (click)="feedback=''" class="user-form">
+  <div style="display: flex; flex-direction: column; justify-content: center; background-color: rgb(238, 235, 235); padding: 0px; border-radius: 0px;" class="form-container">
+    <div class="form-group col-md-6" style="width: 100%;">
+      <h6>Name</h6>
+      <input type="text" class="form-control" [(ngModel)]="updatingUser.name" name="name" id="name" style="width: 100%;">
+    </div>
+    <div class="form-group col-md-6" style="width: 100%;">
+      <h6>Password</h6>
+      <input type="password" class="form-control" [(ngModel)]="updatingUser.password" name="password" id="password" style="width: 100%;">
+    </div>
+    <div class="form-group col-md-6" style="width: 100%;">
+      <h6>Address</h6>
+      <input type="text" class="form-control" [(ngModel)]="updatingUser.address" name="address" id="address" style="width: 100%;">
+    </div>
+    <h6>Roles</h6>
+    <div *ngFor="let r of roles; let i = index">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="rolRadio" [value]="r"
+          [checked]="selectedRoles.includes(r)" (change)="toggleRoleSelection(r)">
+        <label class="form-check-label" [for]="'rolRadio' + i">{{ r }}</label>
       </div>
     </div>
-  </form>
-
-  <button class="btn btn-primary" (click)="updateUserData()">Update changes</button>
-  <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
-  
-  <p>{{feedback}}</p>
+    <div class="button-container">
+      <button class="btn btn-primary" (click)="updateUserData()">Update changes</button>
+      <button class="btn btn-secondary" (click)="goBack()">Go Back</button>
+    </div>
+  </div>
+</form>
+<p style="text-align: center;" class="feedback">{{ feedback }}</p>
